# CPP_rtype_2019

./: CMakeLists.txt  conanfile.txt  server.sh  start.sh
src/assets/enemies/: enemi.json  enemy.json
src/assets/maps/: level_1.json
src/assets/players/: basic.json
src/assets/weapons/: fireshot.json
src/client/include/: eventManager.hpp  interface.hpp  rtype.hpp
src/client/include/Connection/: tcp_connection.hpp
src/client/include/client/: tcp_client.hpp  udp_client.hpp
src/client/src/: Tcpconnect.cpp  UdpConnect.cpp  displayBtn.cpp  displayText.cpp  displayscene.cpp  eventManager.cpp  interface.cpp  main.cpp
src/client/src/Connection/: tcp_connection.cpp
src/client/src/client/: tcp_client.cpp  udp_client.cpp
src/client/src/rtype/: ennemy.cpp  player.cpp  projectile.cpp
src/include/: Boost.hpp  commucication_struct.hpp  udp_connection.cpp  udp_connection.hpp
src/include/Identity/: Identity.cpp  Identity.hpp
src/server/include/: global.hpp
src/server/include/Connection/: tcp_connection.hpp
src/server/include/GameEngine/: game_engine.hpp
src/server/include/room/: room.hpp
src/server/include/server/: tcp_server.hpp  udp_server.hpp
src/server/src/: main.cpp
src/server/src/Connection/: tcp_connection.cpp
src/server/src/GameEngine/: game_engine.cpp
src/server/src/room/: room.cpp
src/server/src/server/: tcp_server.cpp  udp_server.cpp
